--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ typer==0.24.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
+uuid6==2025.0.1
 uvicorn==0.41.0
 uvloop==0.22.1
 watchfiles==1.1.1
