--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5433/ai_analyst
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=ai_analyst
+JWT_SECRET=your-secret-key-here
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_MINUTES=30
