--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 asyncpg==0.31.0
+bcrypt==4.0.1
 certifi==2026.1.4
+cffi==2.0.0
 click==8.3.1
+cryptography==46.0.5
 dnspython==2.8.0
+ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.129.2
 fastapi-cli==0.0.23
@@ -22,20 +26,25 @@ Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+pyasn1==0.6.2
+pycparser==3.0
 pydantic==2.12.5
 pydantic-extra-types==2.11.0
 pydantic-settings==2.13.1
 pydantic_core==2.41.5
 Pygments==2.19.2
 python-dotenv==1.2.1
+python-jose==3.5.0
 python-multipart==0.0.22
 PyYAML==6.0.3
 rich==14.3.3
 rich-toolkit==0.19.4
 rignore==0.7.6
+rsa==4.9.1
 ruff==0.15.2
 sentry-sdk==2.53.0
 shellingham==1.5.4
+six==1.17.0
 SQLAlchemy==2.0.46
 starlette==0.52.1
 typer==0.24.1
