fix: import sort

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,9 @@ line-length = 88
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W"]
 
+[tool.ruff.lint.isort]
+known-first-party = ["app"]
+force-sort-within-sections = true
+
 [tool.ruff.format]
 quote-style = "double"
